kubernetes/apps/metrics/dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: metrics-dashboard
    namespace: metrics
spec:
    replicas: 1
    selector:
        matchLabels:
            app: metrics-dashboard
    template:
        metadata:
            labels:
                app: metrics-dashboard
        spec:
            containers:
                - name: metrics-dashboard
                  image: registry.kwer.fr/kubequest/prod/metrics-dashboard:latest
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: metrics-dashboard
    namespace: metrics
spec:
    selector:
        app: metrics-dashboard
    ports:
        - name: http
          port: 80
          targetPort: 80
