kubernetes/apps/metrics/dashboard/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: metrics-dashboard-route
    namespace: metrics
spec:
    parentRefs:
        - name: cluster-edge-gateway
          namespace: traefik
    hostnames:
        - metrics.kwer.fr
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: metrics-dashboard
                port: 80
